Improved tests